app/assets/stylesheets/base.scss
@import "variables";
@import "mixins";

html, body {
  background-color: $knowit-complementary-gray-color-lightest-tint25;
}

a {
  color: $knowit-complementary-blue-color-light;

  &:hover {
    color: $knowit-complementary-blue-color;
  }
}

h1, h2, h3, h4, h5 {
  font-weight: 800;
  font-family: 'Raleway';
}

h2 {
  margin: 0;
  padding: 0;
}

.ui.segment {
  background: $knowit-primary-green-color-lightest;
  border: 0px;

  form .actions {
    margin-top: 1em;
    padding-top: 1em;
    border-top: 2px solid $knowit-black-color;
  }

  .ui.divider {
    border: 0px;
    border-top: 1px solid $knowit-primary-green-color-lighter;
  }

}

.ui.error.message {
  font-weight: bold;
  border-width: 0px;
}

#top-menu.fixed + #frontpage-info {
  margin-top: 75px;
}
.ui.secondary.pointing.menu.fixed {
  top:0;
 }
.ui.secondary.pointing.menu {
  top: -200px; //height of the div
  left: 0;
  z-index: 1;
  width: 100%;
  -webkit-transition: top 0.3s;
  transition: top 0.3s;
  margin-top: 0;
  margin-bottom: 0;
  background-color: white;
  font-family: 'Raleway';
  border-bottom: 2px solid white;

  .item {
    padding: 1.5em 1.14285714em;
  }
  .item:first-child {
    margin-left: 10%;
  }
  a.item:hover {
    background-color: $knowit-primary-green-color-lighter;
  }
  a.item:hover {
    color: white;
  }
  a.item {
    font-size: 18px;
    color: $knowit-black-color;
    font-weight: bold;
  }
}

#auxiliary-menu {
  width: 100%;
  margin: 0;

  border-bottom: 2px solid $knowit-complementary-blue-color-lighter;
  background-color: $knowit-complementary-blue-color-lighter;

  .item {
    padding: 1em;
  }
  .item:first-child {
    margin-left: 10%;
  }
  .item:hover {
    background-color: $knowit-complementary-blue-color-light;
  }
  a.item:hover {
    color: white;
  }
  a.item {
    color: white;
  }
}

.button.knowit-purple {
  @include knowit-purple;
  color: white;
}
.button.knowit-green {
  @include knowit-green;
  color: white;
}

.button.knowit-purple:hover, .button.knowit-purple:focus {
  @include dark-knowit-purple;
  color: white;
}
.button.knowit-green:hover, .button.knowit-green:focus {
  @include dark-knowit-green;
  color: white;
}

.ui.page.grid {
  margin-top: 50px;
}


footer {
  width: 100%;
  background-color: $knowit-primary-green-color-light;
  color: white;
  text-align: center;
  padding: 3em 0;

  a {
    color: $knowit-primary-green-color-lighter;
  }
  a:hover, a:focus {
    color: $knowit-primary-green-color-lighter;
    text-decoration: underline;
  }

  .ui.horizontal.divider.header {
    color: white;
  }

}

#image_files {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

.maybe {
  color: $knowit-primary-green-color-lighter;
}

.empty {
  text-align: center;
  color: $knowit-primary-green-color-lighter;
  font-style: italic;
  font-size: 2em;
  padding: 3em;
}

.breadcrumbs {
  i.fa {
    margin-left: 0.5em;
    margin-right: 0.5em;
  }
}

